// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rj:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rj: headlessui-listbox-button-:rk:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg px-3 py-2 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rk:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full text-14-light"
          data-testid="txt"
          title=""
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rn:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rn: headlessui-listbox-button-:ro:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg px-3 py-2 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:ro:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full text-14-light"
          data-testid="txt"
          title=""
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rh:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rh: headlessui-listbox-button-:ri:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg px-3 py-2 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:ri:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full text-14-light"
          data-testid="txt"
          title=""
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Meta Data 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex items-baseline gap-1"
    data-headlessui-state=""
    id="headlessui-listbox-label-:rp:"
    onClick={[Function]}
  >
    <label
      className="mr-2 inline uppercase capitalize text-16-bold"
      data-testid="txt"
    >
      Select Polygon 
    </label>
  </div>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rp: headlessui-listbox-button-:rq:"
    className="flex h-10 items-center justify-between gap-3 rounded-lg px-3 py-2 hover:cursor-pointer border-light"
    data-headlessui-state=""
    disabled={false}
    id="headlessui-listbox-button-:rq:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <div
      className="flex items-center gap-2"
    >
      <p
        className="w-full text-14-light"
        data-testid="txt"
        title=""
      >
        Select Polygon
      </p>
    </div>
    <div
      style={
        Object {
          "height": undefined,
          "width": 24,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rl:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rl: headlessui-listbox-button-:rm:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg px-3 py-2 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rm:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full text-14-light"
          data-testid="txt"
          title=""
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
    </div>
  </div>
</div>
`;
